# gtk-open-with

./: CMakeLists.txt  README.md  gtkopen.cpp
